--- a/index3.html
+++ b/index3.html
@@ -10,40 +10,51 @@
 
 </head>
 <body>
+  <h1>DEPARTMENT BOOKS</h1><br>
    <div class="container">
   <div class="card" style="width: 18rem;">
-  <img src="eng.jpg" class="card-img-top" width="200px" height="200px">
+  <img src="cse.jpg" class="card-img-top" width="200px" height="200px">
   <div class="card-body">
-    <h5 class="card-title"> ENGINEERING </h5>
-    <p class="card-text">Engineering is the application of scientific and mathematical principles to design, build, and improve structures, machines, systems, and processes.</p>
-    <a href="#" class="btn btn-dark">choosing</a>
+    <h5 class="card-title">CSE</h5>
+    <p class="card-text"> Computer Science Engineering. It's a highly popular engineering discipline that merges the core  design, develop, and manage computer hardware, software, algorithms, and network systems. .</p>
+    <a href="index4.html" class="btn btn-dark">choosing</a>
     </div>
     </div>
 
   <div class="card" style="width: 18rem;">
-  <img src="agiri.jpg" class="card-img-top" width="200px" height="200px">
+  <img src="civil.jpg" class="card-img-top" width="200px" height="200px">
   <div class="card-body">
-    <h5 class="card-title">AGRICULTRUE</h5>
-    <p class="card-text">Agriculture is the practice of cultivating plants and rearing animals to produce food, fiber, and other useful products.</p>
-    <a href="#" class="btn btn-dark">choosing</a>
+    <h5 class="card-title">CIVIL</h5>
+    <p class="card-text">Civil engineering is the application of physical and scientific principles for the design, development and maintenance of both the constructed and the naturally built environment.</p>
+    <a href="index5.html" class="btn btn-dark">choosing</a>
   </div>
    </div>
 
  <div class="card" style="width: 18rem;">
-  <img src="social.jpg" class="card-img-top" width="200px" height="200px">
+  <img src="ece.jpg" class="card-img-top" width="200px" height="200px">
   <div class="card-body">
-    <h5 class="card-title">SOCIALISM</h5>
-    <p class="card-text">Socialism is an economic and political system that advocates for  eliminating private ownership and control.</p>
-    <a href="#" class="btn btn-dark">choosing</a>
+    <h5 class="card-title">ECE</h5>
+    <p class="card-text">In engineering, ECE stands for Electronics and Communication Engineering. It is a branch of engineering  electronics and communication systems, electronic devices, communication equipment, and telecommunication networks. </p>
+    <a href="index6.html" class="btn btn-dark">choosing</a>
   </div>
 </div>
 
 <div class="card" style="width: 18rem;">
-  <img src="universe.jpg" class="card-img-top" width="200px" height="200px">
+  <img src="eee.jpg" class="card-img-top" width="200px" height="200px">
   <div class="card-body">
-    <h5 class="card-title">UNIVERSE</h5>
-    <p class="card-text">The universe is everything that exists: all of space, time, matter, and energy.</p>
-    <a href="#" class="btn btn-dark">choosing</a>
+    <h5 class="card-title">EEE</h5>
+    <p class="card-text"> Electrical and Electronics Engineering. It is a dynamic and interdisciplinary field thatfocusing on the design, development, testing, and management of electrical systems, electronic devices, and related technologies. </p>
+    <a href="index7.html" class="btn btn-dark">choosing</a>
+  </div>
+</div>
+
+
+<div class="card" style="width: 18rem;">
+  <img src="mech.jpg" class="card-img-top" width="200px" height="200px">
+  <div class="card-body">
+    <h5 class="card-title">MECH</h5>
+    <p class="card-text"> Mechanical Engineering, a core discipline focused on the design, analysis, manufacturing, and  devices, applying principles of physics, mathematics, and materials science to solve real-world problems. </p>
+    <a href="index8.html" class="btn btn-dark">choosing</a>
   </div>
 </div>
 </div>
