--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,100 @@
     <link rel="stylesheet" href="dep.css">
 </head>
 <body>
-  <div class="container">
-    
-  </div>
+   <h1>CSE DEPARTMENT</h1><br>
+  <div class="con">
+<table class="table">
+  <table class="table table-striped">
+  <table class="table  table-striped">
+    <table class="table table-striped">
+      <table class="table  table-hover">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">1st Year</th>
+      <th scope="col">2st Year</th>
+      <th scope="col">3st Year</th>
+      <th scope="col">4st Year</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td><a href="index9.html">English</a></td>
+      <td><a href="index9.html">Data structure</a></td>
+      <td><a href="index9.html">DSA</a>
+      </td>
+      <td><a href="index9.html">Machine Learing</a></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td><a href="index9.html">M1</a></td>
+      <td><a href="index9.html"> Network</a></td>
+      <td><a href="index9.html">TOC</a></td>
+      <td><a href="index9.html">Cyber Security</a></td>
+    </tr>
+
+      <tr>
+      <th scope="row">3</th>
+      <td><a href="index9.html">Physics</a></td>
+      <td><a href="index9.html">software Engineering</a></td>
+      <td><a href="index9.html">Compiler Design</a></td>
+      <td><a href="index9.html">Data analysis</a></td>
+    </tr>
+   
+
+      <tr>
+      <th scope="row">4</th>
+      <td><a href="index9.html">BEEE</a></td>
+      <td><a href="index9.html">Operating System</a></td>
+      <td><a href="index9.html">EVS</a></td>
+      <td><a href="index9.html">Virtualization</a></td>
+    </tr>
+
+      <tr>
+      <th scope="row">5</th>
+      <td><a href="index9.html">Chemistry</a></td>
+      <td><a href="index9.html">Discrete mathematics</a></td>
+      <td><a href="index9.html">Cloud Computing</a></td>
+      <td><a href="index9.html">Mobile app devp</a></td>
+    </tr>
+
+    <tr>
+      <th scope="row">6</th>
+      <td><a href="index9.html">python</a></td>
+      <td><a href="index9.html">DBMS</a></td>
+      <td><a href="index9.html">Data Mining</a></td>
+      <td></td>
+    </tr>
+ 
+      <tr>
+      <th scope="row">8</th>
+  
+      <td> <a href="index9.html">C-programming</a></td>
+      <td><a href="index9.html">DCO</a></td>
+      <td><a href="index9.html">WEB TECH</a>a</td>
+      <td></td></a>
+    </tr>
+
+     <tr>
+      <th scope="row">9</th>
+      <td>Graphic</td>
+      <td>OOBS</td>
+      <td>AI</td>
+      <td></td>
+    </tr>
+
+
+   
+
+   
+  </tbody>
+
+      </table>
+    </table>
+  </table>
+  </table>
+</table>
+</div>
 </body>
 </html>
